fix overflow in about section and add tab index to body

--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -73,6 +73,8 @@ canvas {
 
 .about {
     padding: 5rem 0;
+    position: relative;
+    overflow: hidden;
 
     &__text {
         opacity: 0;
